fixed style inconsistency