@@ -7,7 +7,6 @@
  */
 package org.dspace.statistics;
 
-import javax.servlet.http.HttpServletRequest;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileWriter;
@@ -36,6 +35,7 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+import javax.servlet.http.HttpServletRequest;
 
 import com.maxmind.geoip2.DatabaseReader;
 import com.maxmind.geoip2.exception.GeoIp2Exception;
@@ -113,58 +113,35 @@ import org.springframework.beans.factory.annotation.Autowired;
  */
 public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBean {
 
-    private static final Logger log = LogManager.getLogger();
-
-    private static final String MULTIPLE_VALUES_SPLITTER = "|";
-    protected SolrClient solr;
-
     public static final String DATE_FORMAT_8601 = "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'";
-
     public static final String DATE_FORMAT_DCDATE = "yyyy-MM-dd'T'HH:mm:ss'Z'";
-
-    protected DatabaseReader locationService;
-
-    protected boolean useProxies;
-
+    private static final Logger log = LogManager.getLogger();
+    private static final String MULTIPLE_VALUES_SPLITTER = "|";
     private static final List<String> statisticYearCores = new ArrayList<>();
-    private static boolean statisticYearCoresInit = false;
-
     private static final String IP_V4_REGEX = "^((?:\\d{1,3}\\.){3})\\d{1,3}$";
     private static final String IP_V6_REGEX = "^(.*):.*:.*$";
-
+    private static boolean statisticYearCoresInit = false;
+    protected SolrClient solr;
+    protected DatabaseReader locationService;
+    protected boolean useProxies;
     @Autowired(required = true)
     protected BitstreamService bitstreamService;
     @Autowired(required = true)
     protected ContentServiceFactory contentServiceFactory;
+    /**
+     * String of IP and Ranges in IPTable as a Solr Query
+     */
+    protected String filterQuery = null;
     @Autowired(required = true)
     private ConfigurationService configurationService;
     @Autowired(required = true)
     private ClientInfoService clientInfoService;
     @Autowired
     private SolrStatisticsCore solrStatisticsCore;
-
     /** URL to the current-year statistics core.  Prior-year shards will have a year suffixed. */
     private String statisticsCoreURL;
-
     /** Name of the current-year statistics core.  Prior-year shards will have a year suffixed. */
     private String statisticsCoreBase;
-
-    public static enum StatisticsType {
-        VIEW("view"),
-        SEARCH("search"),
-        SEARCH_RESULT("search_result"),
-        WORKFLOW("workflow");
-
-        private final String text;
-
-        StatisticsType(String text) {
-            this.text = text;
-        }
-
-        public String text() {
-            return text;
-        }
-    }
 
     protected SolrLoggerServiceImpl() {
 
@@ -246,7 +223,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         } catch (Exception e) {
             String email = null == currentUser ? "[anonymous]" : currentUser.getEmail();
             log.error("Error saving VIEW event to Solr for DSpaceObject {} by EPerson {}",
-                      dspaceObject.getID(), email, e);
+                dspaceObject.getID(), email, e);
         }
     }
 
@@ -260,7 +237,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
 
         try {
             SolrInputDocument doc1 = getCommonSolrDoc(dspaceObject, ip, userAgent, xforwardedfor,
-                                                      currentUser);
+                currentUser);
             if (doc1 == null) {
                 return;
             }
@@ -285,7 +262,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             throw re;
         } catch (Exception e) {
             log.error("Error saving VIEW event to Solr for DSpaceObject {} by EPerson {}",
-                      dspaceObject.getID(), currentUser.getEmail(), e);
+                dspaceObject.getID(), currentUser.getEmail(), e);
         }
     }
 
@@ -354,7 +331,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                     double latitude = location.getLocation().getLatitude();
                     double longitude = location.getLocation().getLongitude();
                     if (!(
-                            "--".equals(countryCode)
+                        "--".equals(countryCode)
                             && latitude == -180
                             && longitude == -180)
                     ) {
@@ -440,16 +417,16 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                 double latitude = location.getLocation().getLatitude();
                 double longitude = location.getLocation().getLongitude();
                 if (!(
-                        "--".equals(countryCode)
-                                && latitude == -180
-                                && longitude == -180)
+                    "--".equals(countryCode)
+                        && latitude == -180
+                        && longitude == -180)
                 ) {
                     try {
                         doc1.addField("continent", LocationUtils
-                                .getContinentCode(countryCode));
+                            .getContinentCode(countryCode));
                     } catch (Exception e) {
                         System.out
-                                .println("COUNTRY ERROR: " + countryCode);
+                            .println("COUNTRY ERROR: " + countryCode);
                     }
                     doc1.addField("countryCode", countryCode);
                     doc1.addField("city", location.getCity().getName());
@@ -524,7 +501,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             throw re;
         } catch (Exception e) {
             log.error("Error saving SEARCH event to Solr by EPerson {}",
-                      currentUser.getEmail(), e);
+                currentUser.getEmail(), e);
         }
     }
 
@@ -628,7 +605,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     @Override
     public Map<String, List<String>> queryField(String query,
                                                 List oldFieldVals, String field)
-            throws IOException {
+        throws IOException {
         Map<String, List<String>> currentValsStored = new HashMap<>();
         try {
             // Get one document (since all the metadata for all the values
@@ -647,81 +624,6 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         }
         return currentValsStored;
     }
-
-
-    public class ResultProcessor {
-
-        private SolrInputDocument toSolrInputDocument(SolrDocument d) {
-            SolrInputDocument doc = new SolrInputDocument();
-
-            for (String name : d.getFieldNames()) {
-                doc.addField(name, d.getFieldValue(name));
-            }
-
-            return doc;
-        }
-
-        public void execute(String query) throws SolrServerException, IOException {
-            Map<String, String> params = new HashMap<>();
-            params.put("q", query);
-            params.put("rows", "10");
-            if (0 < statisticYearCores.size()) {
-                params.put(ShardParams.SHARDS, StringUtils.join(statisticYearCores.iterator(), ','));
-            }
-            MapSolrParams solrParams = new MapSolrParams(params);
-            QueryResponse response = solr.query(solrParams);
-
-            SolrDocumentList results = response.getResults();
-            long numbFound = results.getNumFound();
-
-            // process the first batch
-            for (SolrDocument result : results) {
-                process(toSolrInputDocument(result));
-            }
-
-            // Run over the rest
-            for (int i = 10; i < numbFound; i += 10) {
-                params.put("start", String.valueOf(i));
-                solrParams = new MapSolrParams(params);
-                response = solr.query(solrParams);
-                results = response.getResults();
-                for (SolrDocument result : results) {
-                    process(toSolrInputDocument(result));
-                }
-            }
-
-        }
-
-        public void commit() throws IOException, SolrServerException {
-            solr.commit();
-        }
-
-        /**
-         * Override to manage pages of documents
-         *
-         * @param docs a list of Solr documents
-         * @throws IOException         A general class of exceptions produced by failed or interrupted I/O operations.
-         * @throws SolrServerException Exception from the Solr server to the solrj Java client.
-         */
-        public void process(List<SolrInputDocument> docs) throws IOException, SolrServerException {
-            for (SolrInputDocument doc : docs) {
-                process(doc);
-            }
-        }
-
-        /**
-         * Override to manage individual documents
-         *
-         * @param doc Solr document
-         * @throws IOException         A general class of exceptions produced by failed or interrupted I/O operations.
-         * @throws SolrServerException Exception from the Solr server to the solrj Java client.
-         */
-        public void process(SolrInputDocument doc) throws IOException, SolrServerException {
-
-
-        }
-    }
-
 
     @Override
     public void markRobotsByIP() {
@@ -812,7 +714,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     @Override
     public void update(String query, String action,
                        List<String> fieldNames, List<List<Object>> fieldValuesList, boolean commit)
-            throws SolrServerException, IOException {
+        throws SolrServerException, IOException {
 
         // Since there is NO update
         // We need to get our documents
@@ -879,7 +781,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
 
     @Override
     public void query(String query, int max, int facetMinCount)
-            throws SolrServerException, IOException {
+        throws SolrServerException, IOException {
         query(query, null, null, 0, max, null, null, null, null, null, false, facetMinCount);
     }
 
@@ -887,9 +789,9 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     public ObjectCount[] queryFacetField(String query,
                                          String filterQuery, String facetField, int max, boolean showTotal,
                                          List<String> facetQueries, int facetMinCount)
-            throws SolrServerException, IOException {
+        throws SolrServerException, IOException {
         QueryResponse queryResponse = query(query, filterQuery, facetField,
-                                            0, max, null, null, null, facetQueries, null, false, facetMinCount);
+            0, max, null, null, null, facetQueries, null, false, facetMinCount);
         if (queryResponse == null) {
             return new ObjectCount[0];
         }
@@ -910,7 +812,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             if (showTotal) {
                 result[result.length - 1] = new ObjectCount();
                 result[result.length - 1].setCount(queryResponse.getResults()
-                                                                .getNumFound());
+                    .getNumFound());
                 result[result.length - 1].setValue("total");
             }
             return result;
@@ -924,20 +826,20 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     public ObjectCount[] queryFacetDate(String query,
                                         String filterQuery, int max, String dateType, String dateStart,
                                         String dateEnd, boolean showTotal, Context context, int facetMinCount)
-            throws SolrServerException, IOException {
+        throws SolrServerException, IOException {
         QueryResponse queryResponse = query(query, filterQuery, null, 0, max,
-                                            dateType, dateStart, dateEnd, null, null, false, facetMinCount);
+            dateType, dateStart, dateEnd, null, null, false, facetMinCount);
         if (queryResponse == null) {
             return new ObjectCount[0];
         }
 
         List<RangeFacet> rangeFacets = queryResponse.getFacetRanges();
-        for (RangeFacet rangeFacet: rangeFacets) {
+        for (RangeFacet rangeFacet : rangeFacets) {
             if (rangeFacet.getName().equalsIgnoreCase("time")) {
                 RangeFacet timeFacet = rangeFacet;
                 // Create an array for our result
                 ObjectCount[] result = new ObjectCount[timeFacet.getCounts().size()
-                                                       + (showTotal ? 1 : 0)];
+                    + (showTotal ? 1 : 0)];
                 // Run over our datefacet & store all the values
                 for (int i = 0; i < timeFacet.getCounts().size(); i++) {
                     RangeFacet.Count dateCount = (RangeFacet.Count) timeFacet.getCounts().get(i);
@@ -948,7 +850,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                 if (showTotal) {
                     result[result.length - 1] = new ObjectCount();
                     result[result.length - 1].setCount(queryResponse.getResults()
-                                                                    .getNumFound());
+                        .getNumFound());
                     // TODO: Make sure that this total is gotten out of the msgs.xml
                     result[result.length - 1].setValue("total");
                 }
@@ -963,7 +865,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                                                 int facetMinCount)
         throws SolrServerException, IOException {
         QueryResponse response = query(query, filterQuery, null, 0, 1, null, null,
-                                       null, facetQueries, null, false, facetMinCount);
+            null, facetQueries, null, false, facetMinCount);
         return response.getFacetQuery();
     }
 
@@ -971,7 +873,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     public ObjectCount queryTotal(String query, String filterQuery, int facetMinCount)
         throws SolrServerException, IOException {
         QueryResponse queryResponse = query(query, filterQuery, null, 0, -1, null,
-                                            null, null, null, null, false, facetMinCount);
+            null, null, null, null, false, facetMinCount);
         ObjectCount objCount = new ObjectCount();
         objCount.setCount(queryResponse.getResults().getNumFound());
 
@@ -1027,17 +929,17 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     public QueryResponse query(String query, String filterQuery, String facetField, int rows, int max, String dateType,
                                String dateStart, String dateEnd, List<String> facetQueries, String sort,
                                boolean ascending, int facetMinCount)
-            throws SolrServerException, IOException {
+        throws SolrServerException, IOException {
 
         return query(query, filterQuery, facetField, rows, max, dateType, dateStart, dateEnd, facetQueries, sort,
-                ascending, facetMinCount, true);
+            ascending, facetMinCount, true);
     }
 
     @Override
     public QueryResponse query(String query, String filterQuery, String facetField, int rows, int max, String dateType,
                                String dateStart, String dateEnd, List<String> facetQueries, String sort,
                                boolean ascending, int facetMinCount, boolean defaultFilterQueries)
-            throws SolrServerException, IOException {
+        throws SolrServerException, IOException {
 
         if (solr == null) {
             return null;
@@ -1045,21 +947,21 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
 
         // System.out.println("QUERY");
         SolrQuery solrQuery = new SolrQuery().setRows(rows).setQuery(query)
-                                             .setFacetMinCount(facetMinCount);
+            .setFacetMinCount(facetMinCount);
         addAdditionalSolrYearCores(solrQuery);
 
         // Set the date facet if present
         if (dateType != null) {
             solrQuery.setParam("facet.range", "time")
-                .
+                    .
                 // EXAMPLE: NOW/MONTH+1MONTH
                     setParam("f.time.facet.range.end",
-                             "NOW/" + dateType + dateEnd + dateType).setParam(
-                "f.time.facet.range.gap", "+1" + dateType)
-                .
+                    "NOW/" + dateType + dateEnd + dateType).setParam(
+                    "f.time.facet.range.gap", "+1" + dateType)
+                    .
                 // EXAMPLE: NOW/MONTH-" + nbMonths + "MONTHS
                     setParam("f.time.facet.range.start",
-                             "NOW/" + dateType + dateStart + dateType + "S")
+                    "NOW/" + dateType + dateStart + dateType + "S")
                 .setFacet(true);
         }
         if (facetQueries != null) {
@@ -1087,14 +989,14 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
 
         // Choose to filter by the Legacy spider IP list (may get too long to properly filter all IP's
         if (defaultFilterQueries && configurationService.getBooleanProperty(
-                "solr-statistics.query.filter.spiderIp", false)) {
+            "solr-statistics.query.filter.spiderIp", false)) {
             solrQuery.addFilterQuery(getIgnoreSpiderIPs());
         }
 
         // Choose to filter by isBot field, may be overriden in future
         // to allow views on stats based on bots.
         if (defaultFilterQueries && configurationService.getBooleanProperty(
-                "solr-statistics.query.filter.isBot", true)) {
+            "solr-statistics.query.filter.isBot", true)) {
             solrQuery.addFilterQuery("-isBot:true");
         }
 
@@ -1139,12 +1041,6 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         }
         return response;
     }
-
-
-    /**
-     * String of IP and Ranges in IPTable as a Solr Query
-     */
-    protected String filterQuery = null;
 
     @Override
     public String getIgnoreSpiderIPs() {
@@ -1199,7 +1095,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         //We go back to 2000 the year 2000, this is a bit overkill but this way we ensure we have everything
         //The alternative would be to sort but that isn't recommended since it would be a very costly query !
         yearRangeQuery.add(FacetParams.FACET_RANGE_START,
-                           "NOW/YEAR-" + (Calendar.getInstance().get(Calendar.YEAR) - 2000) + "YEARS");
+            "NOW/YEAR-" + (Calendar.getInstance().get(Calendar.YEAR) - 2000) + "YEARS");
         //Add the +0year to ensure that we DO NOT include the current year
         yearRangeQuery.add(FacetParams.FACET_RANGE_END, "NOW/YEAR+0YEARS");
         yearRangeQuery.add(FacetParams.FACET_RANGE_GAP, "+1YEAR");
@@ -1263,13 +1159,13 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                 HttpGet get = new HttpGet(solrRequestUrl);
                 InputStream csvInputstream;
                 File csvFile = new File(tempDirectory.getPath()
-                        + File.separatorChar
-                        + "temp."
-                        + dcStart.getYearUTC()
-                        + "."
-                        + i
-                        + ".csv");
-                try ( CloseableHttpClient hc = HttpClientBuilder.create().build(); ) {
+                    + File.separatorChar
+                    + "temp."
+                    + dcStart.getYearUTC()
+                    + "."
+                    + i
+                    + ".csv");
+                try (CloseableHttpClient hc = HttpClientBuilder.create().build()) {
                     HttpResponse response = hc.execute(get);
                     csvInputstream = response.getEntity().getContent();
                     //Write the csv ouput to a file !
@@ -1317,7 +1213,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     }
 
     protected HttpSolrClient createCore(HttpSolrClient solr, String coreName)
-            throws IOException, SolrServerException {
+        throws IOException, SolrServerException {
         String baseSolrUrl = solr.getBaseURL().replace(statisticsCoreBase, ""); // Has trailing slash
 
         //DS-3458: Test to see if a solr core already exists.  If it exists,
@@ -1339,7 +1235,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         CoreAdminRequest.Create create = new CoreAdminRequest.Create();
         create.setCoreName(coreName);
         String configSetName = configurationService
-                .getProperty("solr-statistics.configset", "statistics");
+            .getProperty("solr-statistics.configset", "statistics");
         create.setConfigSet(configSetName);
         create.setInstanceDir(coreName);
 
@@ -1373,7 +1269,6 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         }
         return multivaluedFields;
     }
-
 
     @Override
     public void reindexBitstreamHits(boolean removeDeletedBitstreams) throws Exception {
@@ -1411,7 +1306,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
 
                 HttpGet get = new HttpGet(solrRequestUrl);
                 List<String[]> rows;
-                try ( CloseableHttpClient hc = HttpClientBuilder.create().build(); ) {
+                try (CloseableHttpClient hc = HttpClientBuilder.create().build()) {
                     HttpResponse response = hc.execute(get);
                     InputStream csvOutput = response.getEntity().getContent();
                     Reader csvReader = new InputStreamReader(csvOutput);
@@ -1433,7 +1328,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                 //csvp.setAlwaysQuote(false);
 
                 //Write the header !
-                csvp.writeNext((String[]) ArrayUtils.add(header, "bundleName"));
+                csvp.writeNext(ArrayUtils.add(header, "bundleName"));
                 Map<String, String> bitBundleCache = new HashMap<>();
                 //Loop over each line (skip the headers though)!
                 for (int j = 1; j < csvParsed.length; j++) {
@@ -1472,7 +1367,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                             bundleName = "BITSTREAM_DELETED";
                         }
                     }
-                    csvp.writeNext((String[]) ArrayUtils.add(csvLine, bundleName));
+                    csvp.writeNext(ArrayUtils.add(csvLine, bundleName));
                 }
 
                 //Loop over our parsed csv
@@ -1503,7 +1398,6 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             context.abort();
         }
     }
-
 
     @Override
     public void exportHits() throws Exception {
@@ -1538,7 +1432,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                 //export docs
                 addDocumentsToFile(context, docs, exportOutput);
                 System.out.println(
-                    "Export hits [" + i + " - " + String.valueOf(i + 9999) + "] to " + exportOutput.getCanonicalPath());
+                    "Export hits [" + i + " - " + (i + 9999) + "] to " + exportOutput.getCanonicalPath());
             }
         } catch (Exception e) {
             log.error("Error while exporting SOLR data", e);
@@ -1582,7 +1476,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             DateFormat outputDateFormat = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss");
 
             String out = time + "," + "view_" + contentServiceFactory.getDSpaceObjectService(dso).getTypeText(dso)
-                                                                     .toLowerCase() + "," + id + "," + outputDateFormat
+                .toLowerCase() + "," + id + "," + outputDateFormat
                 .format(solrDate) + ",anonymous," + ip + "\n";
             FileUtils.writeStringToFile(exportOutput, out, StandardCharsets.UTF_8, true);
         }
@@ -1599,7 +1493,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                 result.append("&");
             }
 
-            result.append(key).append("=").append(URLEncoder.encode(parameters.get(key), "UTF-8"));
+            result.append(key).append("=").append(URLEncoder.encode(parameters.get(key), StandardCharsets.UTF_8));
         }
 
         return result.toString();
@@ -1631,7 +1525,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         //Base url should like : http://localhost:{port.number}/solr
         String baseSolrUrl = ((HttpSolrClient) solr).getBaseURL().replace(statisticsCoreBase, "");
 
-        try (HttpSolrClient enumClient = new HttpSolrClient.Builder(baseSolrUrl).build();) {
+        try (HttpSolrClient enumClient = new HttpSolrClient.Builder(baseSolrUrl).build()) {
             //Attempt to retrieve all the statistic year cores
             CoreAdminRequest coresRequest = new CoreAdminRequest();
             coresRequest.setAction(CoreAdminAction.STATUS);
@@ -1656,9 +1550,9 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             }
             //Also add the core containing the current year !
             statisticYearCores.add(((HttpSolrClient) solr)
-                    .getBaseURL()
-                    .replace("http://", "")
-                    .replace("https://", ""));
+                .getBaseURL()
+                .replace("http://", "")
+                .replace("https://", ""));
         } catch (IOException | SolrServerException e) {
             log.error(e.getMessage(), e);
         }
@@ -1669,12 +1563,102 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         InetAddress address = InetAddress.getByName(ip);
         if (address instanceof Inet4Address) {
             return ip.replaceFirst(IP_V4_REGEX, "$1" + configurationService.getProperty(
-                    "anonymize_statistics.ip_v4_mask", "255"));
+                "anonymize_statistics.ip_v4_mask", "255"));
         } else if (address instanceof Inet6Address) {
             return ip.replaceFirst(IP_V6_REGEX, "$1:" + configurationService.getProperty(
-                    "anonymize_statistics.ip_v6_mask", "FFFF:FFFF"));
+                "anonymize_statistics.ip_v6_mask", "FFFF:FFFF"));
         }
 
         throw new UnknownHostException("unknown ip format");
+    }
+
+    public enum StatisticsType {
+        VIEW("view"),
+        SEARCH("search"),
+        SEARCH_RESULT("search_result"),
+        WORKFLOW("workflow");
+
+        private final String text;
+
+        StatisticsType(String text) {
+            this.text = text;
+        }
+
+        public String text() {
+            return text;
+        }
+    }
+
+    public class ResultProcessor {
+
+        private SolrInputDocument toSolrInputDocument(SolrDocument d) {
+            SolrInputDocument doc = new SolrInputDocument();
+
+            for (String name : d.getFieldNames()) {
+                doc.addField(name, d.getFieldValue(name));
+            }
+
+            return doc;
+        }
+
+        public void execute(String query) throws SolrServerException, IOException {
+            Map<String, String> params = new HashMap<>();
+            params.put("q", query);
+            params.put("rows", "10");
+            if (0 < statisticYearCores.size()) {
+                params.put(ShardParams.SHARDS, StringUtils.join(statisticYearCores.iterator(), ','));
+            }
+            MapSolrParams solrParams = new MapSolrParams(params);
+            QueryResponse response = solr.query(solrParams);
+
+            SolrDocumentList results = response.getResults();
+            long numbFound = results.getNumFound();
+
+            // process the first batch
+            for (SolrDocument result : results) {
+                process(toSolrInputDocument(result));
+            }
+
+            // Run over the rest
+            for (int i = 10; i < numbFound; i += 10) {
+                params.put("start", String.valueOf(i));
+                solrParams = new MapSolrParams(params);
+                response = solr.query(solrParams);
+                results = response.getResults();
+                for (SolrDocument result : results) {
+                    process(toSolrInputDocument(result));
+                }
+            }
+
+        }
+
+        public void commit() throws IOException, SolrServerException {
+            solr.commit();
+        }
+
+        /**
+         * Override to manage pages of documents
+         *
+         * @param docs a list of Solr documents
+         * @throws IOException         A general class of exceptions produced by failed or interrupted I/O operations.
+         * @throws SolrServerException Exception from the Solr server to the solrj Java client.
+         */
+        public void process(List<SolrInputDocument> docs) throws IOException, SolrServerException {
+            for (SolrInputDocument doc : docs) {
+                process(doc);
+            }
+        }
+
+        /**
+         * Override to manage individual documents
+         *
+         * @param doc Solr document
+         * @throws IOException         A general class of exceptions produced by failed or interrupted I/O operations.
+         * @throws SolrServerException Exception from the Solr server to the solrj Java client.
+         */
+        public void process(SolrInputDocument doc) throws IOException, SolrServerException {
+
+
+        }
     }
 }
